--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: base
         {% endif %}
 
         {% if site.compass.author %}
-        <div class="author-container"><h1>{{ site.compass.author }}</h1></div>
+        <div class="author-container"><h1>{{ site.company }}</h1></div>
         {% endif %}
 
         {% if site.compass.tagline %}
-        <div class="tagline-container"><p>{{ site.compass.tagline }}</p></div>
+        <div class="tagline-container"><p>{{ site.description }}</p></div>
         {% endif %}
     </header>
     <main>
